<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/more_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="14dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/ActivityMore_HowToTittle"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/ActivityMore_HowToInstructions" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:paddingTop="25dp"
                    android:text="@string/ActivityMore_HowManyTimes"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_MockCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:ems="10"
                    android:inputType="number"
                    android:text="1" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/ActivityMore_TimeInterval"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_MockFrequency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:ems="10"
                    android:inputType="number"
                    android:text="10" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/et_DMockLatLon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/ActivityMore_DMockLatLon"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_DMockLat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="numberSigned|numberDecimal"
                        android:text="0" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_DMockLon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="numberSigned|numberDecimal"
                        android:text="0" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_MockSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ActivityMore_Speed" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_RouteSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:paddingTop="25dp"
                    android:text="@string/ActivityMore_RouteSpeed"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatSeekBar
                        android:id="@+id/seekbar_speed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="120"
                        android:min="5"
                        android:progress="50" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_speed_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="60dp"
                        android:text="50 km/h"
                        android:textSize="14sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_RouteMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:paddingTop="15dp"
                    android:text="@string/ActivityMore_RouteMode"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/rg_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_driving"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/ActivityMore_Driving" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_walking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ActivityMore_Walking" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rb_cycling"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ActivityMore_Cycling" />
                </RadioGroup>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/switch_loop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/ActivityMore_Loop" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_MapProvider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/ActivityMore_MapProvider"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:text="@string/ActivityMore_MapProviderInfo" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_MapProvider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:ems="10"
                    android:inputType="text"
                    android:text="OpenStreetMap" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical"
                    android:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:paddingTop="25dp"
                    android:text="@string/ActivityMore_Copyright"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:autoLink="web"
                    android:text="@string/ActivityMore_SourceCode"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:autoLink="web"
                    android:text="@string/ActivityMore_Bugs"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:text="@string/ActivityMore_IconLicense" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_LeafletLicense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ActivityMore_LeafletLicense" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
